# android-benchmark

./: Readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GRCLBase.cpp  clComplexToArg_impl.cc  clComplexToMag_impl.cc  native-lib.cpp
app/src/main/java/net/bastibl/benchmark/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
